objects/BW_Configuration_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>BW_Rating_Categories__c</fullName>
        <label>Rating Categories</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BW_Rating_Maximum_Score__c</fullName>
        <label>Rating Maximum Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BW_Rating_Minimum_Score__c</fullName>
        <label>Rating Minimum Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>BW Configuration Setting</label>
    <pluralLabel>BW Configuration Settings</pluralLabel>
</CustomObject>